--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,9 @@
     "bootstrap": "^5.2.3",
     "bootswatch": "^5.2.3",
     "font-awesome": "^4.7.0",
+    "hls.js": "^1.3.5-0.canary.8981",
     "ngx-bootstrap": "^9.0.0",
+    "plyr": "^3.7.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
